[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pck67-pkg"
version = "0.1.0"
description = "trackingMaster SDK for experiment tracking"
authors = [
    { name = "charantejagattu" }
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]